--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "euclidean-distance": "^1.0.0",
     "express": "^4.18.2",
     "jsdom": "^22.1.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "node-gzip": "^1.1.2"
   }
 }
